src/test/ui/feature-gates/feature-gate-rustdoc_internals.rs
#[doc(keyword = "match")] //~ ERROR: `#[doc(keyword)]` is meant for internal use only
/// wonderful
mod foo {}

fn main() {}
